--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: Kai Sam Ng
-description: Test Website
+description: Personal Page
 url: https://kaisamng.github.io
 avatar: /avatar.jpeg
 paginate: 5
