--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 title: Kai Sam Ng
 description: Personal Page
 url: https://kaisamng.github.io
-avatar: /avatar.jpeg
+avatar: /avatar.jpg
 paginate: 5
 permalink: pretty
-cover_image: /bg.jpeg
+cover_image: /bg.jpg
 
 # Gems
 plugins:
