Update Main Page

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: Kai Sam Ng
-description: Personal Page
+description: Math and CS Teacher
 url: https://kaisamng.github.io
 avatar: /avatar.jpg
 paginate: 5
