--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,9 @@
 - title: Email
   url: https://tjhsst.fcps.edu/staff/kai-sam-ng
   icon: fas fa-envelope
+- title: Twitter
+  url: https://twitter.com/kaisamng
+  icon: fab fa-twitter
 - title: GitHub
   url: https://github.com/kaisamng
   icon: fab fa-github
