add projects page

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -7,3 +7,6 @@
 - title: GitHub
   url: https://github.com/kaisamng
   icon: fab fa-github
+- title: LinkedIn
+  url: https://www.linkedin.com/in/kaisamng/
+  icon: fab fa-linkedin
