--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 - title: Home/About
   url: /
-- title: RGuides
-  url: https://tjhsststats.github.io/RGuides/index.html
+- title: Projects
+  url: /projects.html
 - title: Blog
   url: /blog.html
 - title: CV
