Update email link away from defunct FCPS Email

--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,5 +1,5 @@
 - title: Email
-  url: https://tjhsst.fcps.edu/staff/kai-sam-ng
+  url: mailto://postmaster@kaisamng.dev
   icon: fas fa-envelope
 - title: Twitter
   url: https://twitter.com/kaisamng
