Update home page content

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: Kai Sam Ng
-description: Technical Educator
+description: Software Developer
 url: https://kaisamng.dev
 avatar: /avatar.jpg
 paginate: 5
